[package]
name = "chapter-code"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "buffer-creation"
path = "03-buffer-creation/main.rs"

[[bin]]
name = "compute-pipeline"
path = "04-compute-pipeline/main.rs"

[[bin]]
name = "images"
path = "05-images/main.rs"

[[bin]]
name = "graphics-pipeline"
path = "06-graphics-pipeline/main.rs"

[[bin]]
name = "windowing"
path = "07-windowing/main.rs"

[dependencies]
image = "0.25.8"
rand = "0.9.2"
vulkano = "0.35.2"
vulkano-shaders = "0.35.0"
winit = "0.30.12"
